--- a/style.css
+++ b/style.css
@@ -414,7 +414,7 @@ button {
   }
 }
 
-/* ==== PENGALAMAN DAN PROJEK ==== */
+/* ==== PORTOFOLIO==== */
 .work-section,
 #education,
 #contact {
@@ -1699,7 +1699,7 @@ body.dark-mode .about-list li i {
   color: #88ccff;
 }
 
-/* ==== PENGALAMAN DAN PROJEK ==== */
+/* ==== PORTOFOLIO ==== */
 body.dark-mode .work-section {
   background: #010a1a;
 }
